--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 
 {% block body %}
    <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-4 fw-normal"> Интернет-магазин ONAIR</h1>
-    <p> ONAIR – интернет-магазин электроники и бытовой техники.</p>
+    <h1 class="text-warning display-4 fw-normal"> Интернет-магазин ONAIR</h1>
+    <p class="lead">ONAIR – интернет-магазин электроники и бытовой техники.</p>
 </div>
   {% endblock %}
 <main>
