--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,11 @@
               </div>
               <div class="card-body">
                 <h1 class="card-title pricing-card-title">{{ el.price }}<small class="text-muted fw-light">рублей</small></h1>
+                <ul class="list-unstyled mt-3 mb-4">
+                  <li>немецкое качество</li>
+                  <li>гарантия 2 года</li>
+                  <li>бесплатная доставка по г. Минск</li>
+                </ul>
                 <a href="" class="btn btn-lg btn-block btn-outline-success">Купить</a>
               </div>
             </div>
